--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 			<p>Desenvolvedor Back-end</p>
 		</header>
 		<main>
-			<a href="https://github.com/leonamCruz">Visite Meu GitHub</a>
+			<a href="https://github.com/leonamCruz">Visite meu GitHub</a>
 			<a href="https://api.whatsapp.com/send?phone=61992648306">Converse comigo pelo Whatsapp</a>
-			<a href="mailto:leonam447@gmail.com">Mande-me um E-mail</a>
-			<a href="https://www.linkedin.com/in/leonamcruz/">Conecte - se comigo no Linkedin</a>
+			<a href="mailto:leonam447@gmail.com">Mande-me um e-mail</a>
+			<a href="https://www.linkedin.com/in/leonamcruz/">Conecte-se comigo no Linkedin</a>
 		</main>
 	</section>
 </body>
