remocao de sombra e troca de cores

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<section>
 		<header>
-			<img src="img/leonam.png">
+			<img src="img/leonam.png" alt="É uma imagem de perfil com um homem na praia.">
 			<h3>@leonamcruzz</h3>
 			<p>Desenvolvedor Back-end</p>
 		</header>
@@ -21,4 +21,3 @@
 		</main>
 	</section>
 </body>
-</html>
