--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html lang = "pt-br">
+<!DOCTYPE>
 <head>
+	<meta lang="pt-br">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="img/icon.svg">
