--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<meta lang="pt-br">
 	<meta charset="utf-8">
+	<meta http-equiv="content-type" content="no-cache" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="img/icon.svg">
 	<link rel="stylesheet" href="style.css">
