--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<a href="https://api.whatsapp.com/send?phone=61992648306">Converse comigo pelo Whatsapp</a>
 			<a href="mailto:leonam447@gmail.com">Mande-me um e-mail</a>
 			<a href="https://www.linkedin.com/in/leonamcruz/">Conecte-se comigo no Linkedin</a>
+			<a href="cv.pdf">Veja meu Currículo</a>
 		</main>
 	</section>
 </body>
