--- a/privacidade.html
+++ b/privacidade.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Política de Privacidade - Estocando</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+<div class = "div_corpo">
+
 <h1>Política de Privacidade do Aplicativo Estocando</h1>
 
-<p>O Aplicativo Estocando foi desenvolvido por Leonam, e tem como objetivo ajudar os usuários a gerenciar seus estoques de forma eficiente e prática. Esta política de privacidade explica como o aplicativo lida com informações coletadas dos usuários.</p>
+<p>O Aplicativo Estocando foi desenvolvido por Leonam, e visa ajudar os usuários a gerenciar seus estoques de forma eficiente e prática. Esta política de privacidade explica como o aplicativo lida com informações coletadas dos usuários.</p>
 
 <h2>Coleta de Informações</h2>
 
@@ -29,5 +31,6 @@
 <h2>Contato</h2>
 
 <p>Se você tiver alguma dúvida ou preocupação sobre esta política de privacidade, entre em contato com Leonam através do e-mail leonam447@gmail.com.</p>
+</div>
 </body>
 </html>
